--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@
   --main-color-dark: var(--yellow-1);
   --font-color-strong: var(--white-0);
   --font-color-default: var(--white-1);
+  --font-mono: sans-serif;
 
   --border-light: rgb(255 255 255 / 0.12);
   --border-strong: rgb(255 255 255 / 0.3);
