--- a/modules/lyonjs100/HomeAnnouncement.module.css
+++ b/modules/lyonjs100/HomeAnnouncement.module.css
@@ -29,6 +29,15 @@
   display: none;
 }
 
+.cta {
+  position: absolute;
+  bottom: -1.5rem;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+}
+
 @media screen and (min-width: 768px) {
   .description {
     margin-left: calc(var(--image-width) - 1rem);
@@ -50,5 +59,10 @@
 
   .header {
     left: calc(var(--image-width) + 1rem);
+  }
+
+  .cta {
+    justify-content: flex-end;
+    right: 5rem;
   }
 }
