--- a/modules/about/Socials.module.css
+++ b/modules/about/Socials.module.css
@@ -1,8 +1,8 @@
 .socialsContainer {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
+  justify-content: center;
   padding-top: 4rem;
-  width: fit-content;
   gap: 0;
   margin: auto;
 }
