--- a/modules/jobs/ListOfJobs.module.css
+++ b/modules/jobs/ListOfJobs.module.css
@@ -33,7 +33,7 @@
   align-items: center;
   width: 100%;
   margin-bottom: -18px;
-  max-height: 24px;
+  height: 3rem;
 }
 
 .title {
@@ -69,23 +69,28 @@
   margin-left: 20px;
 }
 
-.header .logo {
-  display: none;
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  width: 7rem;
-  max-height: 80px;
+.description h1 {
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
 }
 
-.logo {
-  width: 5rem;
-  height: auto;
+.description h1:first-child {
+  margin-top: -0.5rem;
+}
+
+.headerLogo {
+  display: none;
+  height: 100%;
+}
+
+.footerLogo {
+  height: 4rem;
   margin-bottom: 1rem;
 }
 
 @media screen and (min-width: 600px) {
-  .header .logo {
+  .headerLogo {
     display: block;
   }
 
@@ -93,7 +98,7 @@
     display: none;
   }
 
-  .card > .logo {
+  .footerLogo {
     display: none;
   }
 }
