--- a/app/lyonjs-100/LyonJS100.module.css
+++ b/app/lyonjs-100/LyonJS100.module.css
@@ -58,6 +58,11 @@
   justify-content: center;
 }
 
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
 @media screen and (min-width: 768px) {
   .hero {
     height: 20rem;
