--- a/app/presse/PressKit.module.css
+++ b/app/presse/PressKit.module.css
@@ -25,7 +25,7 @@
   margin-top: 1rem;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 768px) {
   .logoGrid {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -33,8 +33,15 @@
 
 .colorGrid {
   display: flex;
+  flex-direction: column;
   gap: 1.5rem;
   margin-top: 1rem;
+}
+
+@media (min-width: 600px) {
+  .colorGrid {
+    flex-direction: row;
+  }
 }
 
 .guidelineColumn {
